# AIJSONSchemaFuzzer

./: Cargo.toml  README.md  test_rust  test_schema.json  test_schema_array.json  test_schema_discriminator.json  test_schema_simple.json  test_schema_with_refs.json
doc/: JSON_SCHEMA_2020_12_UPGRADE.md  MUTATIONS.md  README.md  REGEXP_EXTENSION.md  RFC_COVERAGE.md  TEST_PLAN.md  TEST_RESULTS.md  USER_MANUAL.md
src/: error.rs  main.rs
src/fuzzer/: cli.rs  generator.rs  json_schema_mutations.rs  mod.rs  mutation_names.rs  mutations.rs
src/schema/: ast.rs  json_schema.rs  json_schema_parser.rs  mod.rs  parser.rs  syntax_checks.rs  unified_parser.rs
src/tests/: json_schema_test_cases.rs  mod.rs  rfc_analysis.rs  runner.rs  test_cases.rs
src/validator/: cli.rs  json_schema_validate.rs  mod.rs  validate.rs
