[package]
name = "jtd-validator-tests"
version = "0.1.0"
edition = "2021"
authors = ["Jean-Baptiste"]
description = "Outil de test pour vérifier la conformité d'implémentations de la RFC 8927 (JSON Type Definition)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
rand = "0.8"

[dev-dependencies]
rstest = "0.18"
